--- a/html/home.css
+++ b/html/home.css
@@ -18,46 +18,67 @@
     width: 100%;
     height: auto;
     margin-top: 10px;
+    background-color: rgb(154, 111, 54);
 }
 .head>.logo{
 
     width: 30%;
-    background-color: chartreuse;
+    padding-left: 1rem;
+    
+    /* background-color: chartreuse; */
+}
+
+#logoImg{
+    width: 4rem;
+    border-radius: 50%;
+}
+.logo>figure>figcaption{
+    font-size: 18px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 .head>#nav{
     width: 70%;
     display: flex;
-    justify-content:end;
+    justify-content:center;
     align-items: center;
     flex-wrap: wrap;
     
-    background-color: green;
+    
+    /* background-color: green; */
 }
 .head>#nav>ul{
+    display: flex;
+    gap: 1.9rem;
     list-style-type: none;
+    
 }
 .head>#nav>ul>li{
 
     display: inline;
-    margin-right: 15px;
+    font-size: 20px;
+    text-decoration: solid;
+   
+    /* margin-right: 15px; */
     
 }
 .imgSection{
     width: 100%;
-    height: 300px;
-    margin-top: 5px;
+    height: 75vh;
+    /* margin-top: 5px; */
     
     /* background-color: aqua; */
 }
 .imgSection>img{
     width: 100%;
     height: 100%;
-    padding: 10px;
+    padding: 5px 10px;
    
 }
 .newPost{
     display: inline-flex; 
-    flex-direction: column;
+    /* justify-content: end; */
+    align-items: center;
+    flex-direction:column;
     width:48%; 
     margin-top: 10px;
     padding: 20px; 
@@ -70,6 +91,7 @@
 
 .popularPost{
     display: inline-flex;
+    align-items: center;
     flex-direction: column;
     width: 48%; 
     margin-top: 10px;
@@ -83,19 +105,32 @@
 }
 
 .footer_section{
+    
     width:100%;
-    height: 200px;
-    margin-top: 10px;
-    margin-bottom: 5px;
+    height: auto;
+    margin: 10px;
+    /* margin-bottom: 5px; */
     background-color: burlywood;
 }
 .footer_section>.footer{
     display: flex;
+    flex-wrap: wrap; 
+    justify-content: space-evenly; 
+    align-items: center;
+    padding: 10px;
     height: 80%;
     overflow: hidden;
+    
+    
 }
 .footer_part{
-    width:25%;
+    width:20%;
+     flex: 1 1 auto;
+     display: flex;
+    /*display: flex;
+    justify-content: center;
+    align-items: center; */
+
 }
 .belowfooter{
     height: 20%;
@@ -105,6 +140,8 @@
 .belowfooter>p{
     
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content:center;
+    align-items:center;
+    font-size: 20px;
+    text-decoration: solid;
 }
