--- a/html/style.css
+++ b/html/style.css
@@ -1,6 +1,7 @@
 *{
     margin:0;
     padding:0;
+    box-sizing: border-box;
 }
 
 .pagecontainer{
@@ -13,6 +14,7 @@
     border:1px solid black;
     max-width: 350px;  
     margin: 0 auto;
+    margin-top: 20px;
     /* position: absolute;
     text-align: center;
     justify-content: center; 
@@ -50,3 +52,16 @@
     gap: 10px;
     max-width: 300px;
 } */
+
+#success-message{
+    display: none;
+    color: brown;
+    font-size: 24px;
+
+}
+
+#demo{
+    color: brown;
+    font-size: 24px;
+
+}
