--- a/html/home.css
+++ b/html/home.css
@@ -130,7 +130,8 @@
     
 }
 .footer_part{
-    width:20%;
+    flex:25%;
+    /* width:20%; */
      /* flex: 1 1 auto;
      display: flex; */
     /*display: flex;
