--- a/html/home.css
+++ b/html/home.css
@@ -8,11 +8,11 @@
     overflow-x: hidden;
     overflow-y: auto;
 }
-.container{
+/* .container{
     display: flex;
     flex-wrap: wrap;
     margin: 0 auto;
-}
+} */
 .head{
     display: flex;
     width: 100%;
@@ -29,7 +29,7 @@
     /* background-color: chartreuse; */
 }
 
-#logoImg{
+#logoImg {
     width: 4rem;
     border-radius: 50%;
 }
@@ -109,7 +109,13 @@
     /* background-color: brown;  */
     
 }
-
+.newPost li{
+    list-style-type: none;
+   
+}
+.popularPost li{
+    list-style-type: none;
+}
 .footer_section{
     
     width:100%;
@@ -144,7 +150,7 @@
     background-color:rgb(154, 111, 54);
     
 }
-.belowfooter>p{
+.belowfooter>span{
     
     display: flex;
     justify-content:center;
