age checking using php done

--- a/html/vote.css
+++ b/html/vote.css
@@ -41,6 +41,7 @@
     display: flex;
     justify-content: center; 
     align-items: center;
+    overflow: hidden;
 
 }
 #success-message ,#error-message1,#error-message2{
