testing with external messages from html page fetch to js page

--- a/html/CSS/vote.css
+++ b/html/CSS/vote.css
@@ -44,6 +44,6 @@
     overflow: hidden;
 
 }
-#success-message ,#error-message1,#error-message2{
+#validAge ,#Eligible,#notEligible{
     display: none;
 }
