--- a/html/CSS/login.css
+++ b/html/CSS/login.css
@@ -1,32 +1,43 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
+}
+.body{
+    height: 100vh;
+    background: linear-gradient(#deb887, #9a6f36);
 }
 .wrapper{
     max-width: 300px;
-    height: 250px;
+    height: 350px;
     border: 1px solid black;
-    margin: 0 auto;
+    border-radius: 3rem;
+    margin: 10rem auto;
     display: flex;
-
     justify-content: center;
-    /* align-items: center;    */
+    background: linear-gradient(#9a6f36,#deb887);
+ 
 }
 form{  
     display: flex;
     flex-direction: column;
+    justify-content: center;
     flex-wrap: wrap;
-    /* justify-content: center;
-    align-items: center;  */
     margin-top: 10px;
-    gap:1rem;
+    gap:1.1rem;
+    font-size: 20px;
 }
-#message{
-    display: flex;
-    justify-content: center;  
+form input{
+    height: 1.8rem;
+}
+form input::placeholder{
+    font-size: 15px;
 }
 /* form input[type="submit"]{
     width:fit-content;
     margin: 0 auto;
 } */
+#message{
+    display: flex;
+    justify-content: center;  
+}
