--- a/html/CSS/login.css
+++ b/html/CSS/login.css
@@ -18,6 +18,12 @@
     background: linear-gradient(#9a6f36,#deb887);
  
 }
+.form-control {
+    outline: none;
+    border: none;
+    background: transparent;
+    border-bottom: 2px solid;
+}
 form{  
     display: flex;
     flex-direction: column;
@@ -32,6 +38,14 @@ form input{
 }
 form input::placeholder{
     font-size: 15px;
+}
+.password-section{
+    display: flex;
+    position: relative;
+}
+.eye-section{
+    position: absolute;
+    right: 0;
 }
 /* form input[type="submit"]{
     width:fit-content;
