--- a/html/CSS/style.css
+++ b/html/CSS/style.css
@@ -1,6 +1,7 @@
 *{
     margin:0;
     padding:0;
+    font-family: sans-serif;
 
 }
 .body{
@@ -9,13 +10,20 @@
     background: linear-gradient(#deb887, #9a6f36);
 }
 
+#heading{
+    font-size: 30px;
+}
+
 .pagecontainer{
     max-width: 350px;
-    height: 600px;
+    height: 650px;
     border: 1px solid black;
     border-radius: 3rem;
-    margin: 4rem auto;
+    margin: 0 auto;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
     display: flex;
+    gap:0.6rem;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -24,17 +32,31 @@
 form{
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 0.6rem;
     font-size: 20px;
 }
 form input{
     height: 1.6rem;
 }
+
+.form-control {
+    outline: none;
+    border: none;
+    background: transparent;
+    border-bottom: 2px solid;
+}
 form input::placeholder{
     font-size: 15px;
 }
 
-
+.cpassword-section{
+    display: flex;
+    position: relative;
+}
+.eye-section{
+    position: absolute;
+    right: 0;
+}
 .pagecontainer>form>#btn1 ,#btn2 ,#btn3,#btn4{
     margin: 10px;
     padding: 0 10px;
@@ -45,44 +67,13 @@ form input::placeholder{
     font-size: 24px;
 
 }
-/* .maincontainer{
-    display:flexbox;
-    position: absolute;
-    border:1px solid black;
-    text-align: center;
-    justify-content: center; 
-    align-items: center;
-    max-width: 400px;  
-    
+.error {
+    color: red;
+    font-size: 0.8em;
 }
-.container{
-    border:1px solid black;
-    padding: 10px 0px 10px 0px;
-    display: flex;
-    flex-wrap: wrap;
-    flex:1 1 auto;
-    margin-left: 35px;
-    margin-right: 35px;
-    margin-bottom: 30px;
-    justify-content: center;
-    gap: 10px;
-    max-width: 300px;
+.valid{
+    color:green;
 }
-
-
-#error-message1{
-    display: none;
-    color: brown;
-    font-size: 24px;
+.invalid{
+    color:red;
 }
-#error-message2{
-    display: none;
-    color: brown;
-    font-size: 24px;
-}
-
-#demo{
-    color: brown;
-    font-size: 24px;
-
-} */
