--- a/html/CSS/profile.css
+++ b/html/CSS/profile.css
@@ -35,6 +35,7 @@ body {
     gap:1rem;
 }
 .profile-image{
+    position: relative;
     width: 150px;
     height: 150px;
     border: 1px solid black;
@@ -44,6 +45,7 @@ body {
     max-width: fit-content;
 } */
 .info-part{
+    
     width: 60%;
     display: flex;
     flex-direction: column;
@@ -82,7 +84,8 @@ body {
     margin-top: 10px;
 }
 .form-container input[type="submit"]:hover {
-    background: rgb(50, 42, 42);
+    background: rgb(255, 255, 255);
+    color: #000;
 }
 .form-container .image-part,
 .form-container .info-part {
