--- a/html/CSS/profile.css
+++ b/html/CSS/profile.css
@@ -35,10 +35,19 @@ body {
     gap:1rem;
 }
 .profile-image{
+    background-image: url("../images/profile-circle.svg");
+    background-repeat: no-repeat;
+    background-size:cover;
     position: relative;
-    width: 150px;
-    height: 150px;
+    width: 160px;
+    height: 160px;
     border: 1px solid black;
+    border-radius: 50%;
+}
+#profile-img{
+    position: absolute;
+    width: 160px;
+    height: 160px;
     border-radius: 50%;
 }
 /* #upload{
